force-app/main/default/objects/apxio__Class__c/apxio__Class__c.object-meta.xml
<CustomObject>
    <description>A class being offered for enrollment in a semester</description>
    <label>Class</label>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>