force-app/main/default/objects/apxio__Class__c/fields/apxio__Description__c.field-meta.xml
<CustomField>
    <fullName>apxio__Description__c</fullName>
    <description>A short description of the class</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>