force-app/main/default/objects/apxio__Class__c/fields/apxio__Max_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>apxio__Max_Enrollment__c</fullName>
    <description>Maximum number of students allowed to enroll</description>
    <label>Max Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>