force-app/main/default/objects/apxio__Class__c/fields/apxio__Primary_Teacher__c.field-meta.xml
<CustomField>
    <fullName>apxio__Primary_Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary teacher teaching this class</description>
    <label>Primary Teacher</label>
    <referenceTo>apxio__Teacher__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>